// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Menus/OverflowMenu auto positioning 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": "1",
        "flexDirection": "column",
        "height": "calc(100vh - 4rem)",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "flex-end",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "flex-end",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "alignItems": "flex-end",
            "display": "flex",
            "flex": 1,
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="Menu"
          className="bx--overflow-menu bx--overflow-menu--md"
          data-testid="overflow-menu"
          onClick={[Function]}
          onClose={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          open={false}
          type="button"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="bx--overflow-menu__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="8"
              r="2"
            />
            <circle
              cx="16"
              cy="16"
              r="2"
            />
            <circle
              cx="16"
              cy="24"
              r="2"
            />
            
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Menus/OverflowMenu basic 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="Menu"
    className="bx--overflow-menu bx--overflow-menu--md"
    data-testid="overflow-menu"
    onClick={[Function]}
    onClose={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    open={false}
    type="button"
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="bx--overflow-menu__icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 32 32"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="16"
        cy="8"
        r="2"
      />
      <circle
        cx="16"
        cy="16"
        r="2"
      />
      <circle
        cx="16"
        cy="24"
        r="2"
      />
      
    </svg>
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Menus/OverflowMenu custom trigger 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label={null}
    className="bx--overflow-menu bx--overflow-menu--md"
    data-testid="overflow-menu"
    onClick={[Function]}
    onClose={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    open={false}
    style={
      Object {
        "width": "auto",
      }
    }
    type="button"
  >
    <div
      style={
        Object {
          "padding": "0 1rem",
        }
      }
    >
      Menu
    </div>
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Menus/OverflowMenu with links 1`] = `
<div
  className="storybook-container"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="Menu"
    className="bx--overflow-menu bx--overflow-menu--md"
    data-testid="overflow-menu"
    onClick={[Function]}
    onClose={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    open={false}
    type="button"
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="bx--overflow-menu__icon"
      fill="currentColor"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 32 32"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="16"
        cy="8"
        r="2"
      />
      <circle
        cx="16"
        cy="16"
        r="2"
      />
      <circle
        cx="16"
        cy="24"
        r="2"
      />
      
    </svg>
  </button>
</div>
`;
